# nanocn

./: .gitignore  CLAUDE.md  FAQ.md  README.md  dune-project  nanocn.opam  syntax.md
.claude/skills/code-search/: SKILL.md
.claude/skills/nanocn-parse-errors/: SKILL.md
doc/: Makefile  assertion-implementation.md  assertions.md  derivation.html  design.md  editor-support.md  effect-checking.md  effect-simplification.md  explicit-substitutions.md  explorer.html  extended-resource-terms.md  extending-signatures-to-contain-spec-definitions.md  holes.md  implement-smt-lib-sexps.md  listlength.rcn  merging-judgements.md  refinement-types-3.md  refinement-types.md  smt-encoding.md  smt-lib-2.7-summary.md  smt-via-pipes.md  surface-patterns-3.md  surface-refinement-types.md  syntax.ott  syntax.tex  syntax_ott.tex  typechecker-refactor.md
doc/errors/: error-messages.md  parse-errors-summary.md  type-errors.md
doc/history/: depres-proof-sort.md  doubly-parameterized-syntax-trees.md  editor-support-plan.md  effect-computation-fix.md  explicit-substitutions-plan.md  explorer-backend-plan.md  iter-implementation.md  merge-elaboration-plan.md  merge-implementation-plan.md  merge-syntax-ott-design.md  multi-error-typechecking-rollout.md  refined-program-typechecker.md  scope-resolution.md  smt-encoding-plan.md  surface-computation-patterns.md  typed-ce-pipeline-plan.md  typed-elaborate-plan.md  typed-holes-plan.md
doc/instructions/: grammar-change.md  syntax-trees.md
examples/: arithmetic.cn  booleans.cn  double.cn  equality.cn  factorial.cn  fibonacci.cn  functions.cn  gcd.cn  hello.cn  incr.rcn  iter.cn  let_annotated.cn  listlength.rcn  listsum.cn  mergesort.cn  mixed.cn  pat_iftrue_iffalse.rcn  pat_return_auto.rcn  pat_take.rcn  pat_tuple.rcn  pattern_match.cn  ptr_eq.cn  refined_add.rcn  refined_auto.rcn  refined_eq.rcn  refined_fun.rcn  refined_get.rcn  refined_new_del.rcn  refined_set.rcn  simple_refined.rcn  sort_enum.cn  spec_arith.cn  spec_color.cn  spec_list.cn  spec_tree.cn  state.cn  sum_types.cn  tuples.cn
examples/errors/parsing/: arithmetic-extra-semicolon.cn  arithmetic-missing-equals.cn  arithmetic-missing-semicolon.cn  arithmetic-no-let.cn  arithmetic-unbalanced-paren-extra-close.cn  arithmetic-unbalanced-paren-extra-open.cn  (+175 more)
info/: dune
lib/: compElaborate.ml  compElaborate.mli  compEvalCtx.ml  compEvalCtx.mli  compileFile.ml  compileFile.mli  constraint.ml  constraint.mli  context.ml  context.mli  coreExpr.ml  coreExpr.mli  coreExprGet.ml  coreExprGet.mli  ctorLookup.ml  ctorLookup.mli  dsort.ml  dsort.mli  dsortDecl.ml  dsortDecl.mli  dtypeDecl.ml  dtypeDecl.mli  dune  effect.ml  effect.mli  elabM.ml  elabM.mli  elaborate.ml  elaborate.mli  error.ml  error.mli  errorRender.ml  errorRender.mli  evalCtx.ml  evalCtx.mli  expr.ml  expr.mli  hoverIndex.ml  hoverIndex.mli  json.ml  (+111 more)
scripts/: make-searcher.md
scripts/searcher/: dune  searcher.ml
test/: dune  test_main.ml
test/resilient/: dune  test_compile.ml  test_debug.ml  test_hover.ml  test_multi.ml  test_resilient.ml
(+48 files in other folders)
